--- a/css/agency.css
+++ b/css/agency.css
@@ -172,14 +172,8 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/melhora-o-sangue.jpg");
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  position: relative;
+  z-index: 1;
 }
 
 header.masthead .intro-text {
