--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,23 @@
     color: #4c4cbd;
     font-weight: bold;
 }
+
+header.masthead .divBG {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: url("../img/dieta1.jpg");
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    opacity: .4;
+    width: 100%;
+    height: 100%;
+}
